Tue Nov 29 19:28:56 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Countdown_Time.h:
        * ace/Countdown_Time.cpp:
          Use default value for constructor reducing the number of constructors

Tue Nov 29 15:50:06 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * ace/Timer_Queue_T.h:
        * ace/Timer_Queue_T.inl:

          Added get_timer_method() to be able reuse timer method
          setting.

        * ace/Countdown_Time.h:
        * ace/Countdown_Time.inl:
        * ace/Countdown_Time.cpp:

          Added option to use application defined timer like
          timer queue.

Mon Nov 28 14:29:45 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.h:
          Doxygen change

        * include/makeinclude/wrapper_macros.GNU:
          S.inl files are not generated anymore

Wed Nov 23 07:39:56 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/Time_Value.inl:
          Added a workaround for GCC 3.4 'internal compiler error' issue.

Fri Nov 18 03:54:50 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * bin/PerlACE/Process_Win32.pm:

          Fixed fuzz errors.

Mon Nov 14 06:02:05 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * bin/PerlACE/Process_Win32.pm:

          Bug fix where the script failed it File::Which is not installed
          on the target machine. The script will search the PATH if File::Which
          is installed on the host machine.

Wed Nov  9 23:30:30 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * bin/ChangeLogEditor/FileLocatorFactory.pm:
        * bin/PerlACE/Process_Win32.pm:

          Fixed fuzz errors related to trailing whitespaces.

Tue Nov  8 18:58:36 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * bin/ChangeLogEditor/FileLocatorFactory.pm:

          Implemented a utility function that searches the parent
          directory for the specified directory. This is necessary