@@ -1,6 +1,7 @@
 // $Id$
 
 #include "ace/Countdown_Time.h"
+#include "ace/OS_NS_sys_time.h"
 
 #if !defined (__ACE_INLINE__)
 #include "ace/Countdown_Time.inl"
@@ -8,11 +9,9 @@
 
 ACE_BEGIN_VERSIONED_NAMESPACE_DECL
 
-ACE_Countdown_Time::ACE_Countdown_Time (ACE_Time_Value *max_wait_time,
-                                        ACE_Time_Value (*gettimeofday)(void))
-: max_wait_time_ (max_wait_time),
-  stopped_ (false),
-  gettimeofday_ (gettimeofday)
+ACE_Countdown_Time::ACE_Countdown_Time (ACE_Time_Value *max_wait_time)
+  : max_wait_time_ (max_wait_time),
+    stopped_ (false)
 {
   this->start ();
 }
@@ -27,7 +26,7 @@ ACE_Countdown_Time::start (void)
 {
   if (this->max_wait_time_ != 0)
     {
-      this->start_time_ = this->gettimeofday ();
+      this->start_time_ = ACE_OS::gettimeofday ();
       this->stopped_ = false;
     }
 }
@@ -38,7 +37,7 @@ ACE_Countdown_Time::stop (void)
   if (this->max_wait_time_ != 0 && !this->stopped_)
     {
       ACE_Time_Value const elapsed_time =
-        this->gettimeofday () - this->start_time_;
+        ACE_OS::gettimeofday () - this->start_time_;
 
       if (elapsed_time >= ACE_Time_Value::zero &&
           *this->max_wait_time_ > elapsed_time)
